chore: upgrade → jdk25 (#1669)
chore: upgrade to jdk25

fix: python flags for jdk25
fix: disable detekt in ci until it supports jdk25
fix: disable jvm source loader, repack truffle libs
fix: add shared espresso jar
fix: renamed jvm flags
chore: pin/upgrade java format
chore: update all relevant api pins
chore: maven updates after jdk25

Signed-off-by: Sam Gammon <sam@elide.dev>